# kombt-protocol

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MATCH_TYPES.md
programs/kombt/: Cargo.toml  Xargo.toml
programs/kombt/src/: constants.rs  errors.rs  lib.rs
programs/kombt/src/instructions/: accept_match.rs  cancel.rs  create_match.rs  issue_challenge.rs  mod.rs  settle_price.rs  settle_vrf.rs
programs/kombt/src/state/: challenge.rs  match_state.rs  mod.rs
programs/kombt/src/utils/: escrow.rs  mod.rs  oracle.rs
sdk/typescript/: jest.config.js  package.json  tsconfig.json
sdk/typescript/src/: challenge.ts  client.ts  errors.ts  index.ts  match.ts  types.ts
sdk/typescript/tests/: errors.test.ts  types.test.ts
