[package]
name = "kombt"
version = "0.1.0"
description = "1v1 token combat primitives on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kombt"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

# rev16

# rev26

# rev36
