[package]
name = "kombt"
version = "0.1.0"
description = "1v1 token combat primitives on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kombt"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

# rev16

# rev26

# rev36

# rev46

# rev98

# rev104

# rev105

# rev107

# rev122

# rev125

# rev128

# rev139

# rev146

# rev153

# rev155

# rev156

# rev191

# rev206

# rev209

# rev245

# rev261

# rev299
